--- a/404.md
+++ b/404.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: 404 - Página não encontrada
+title: 404 - Page not found
 permalink: /404
 ---
 
-Desculpe, não consigo encontrar a página que você está procurando. Você pode tentar novamente acessando a [homepage]({{ site.baseurl }}/).
+Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
 
 [<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
