Change theme to Minimal Mistakes

--- a/_posts/2022-07-03-welcome.md
+++ b/_posts/2022-07-03-welcome.md
@@ -1,7 +1,6 @@
 ---
-layout: post
 title: Welcome!
-categories: Personal
+categories: [Personal]
 ---
 
 Welcome to my new **homepage** and **blog**. This site is hosted in my [GitHub](https://github.com/epklein/epklein.github.io), built with [Jekyll](https://jekyllrb.com/) and [Reverie](https://github.com/amitmerchant1990/reverie) as theme.
