Update Post: Welcome

--- a/_posts/2022Q3/2022-07-03-welcome.md
+++ b/_posts/2022Q3/2022-07-03-welcome.md
@@ -4,3 +4,7 @@ categories: [Personal]
 ---
 
 Welcome to my new **homepage** and **blog**. This site is hosted in my [GitHub](https://github.com/epklein/epklein.github.io), built with [Jekyll](https://jekyllrb.com/) and [Reverie](https://github.com/amitmerchant1990/reverie) as theme.
+
+*** 
+
+*Update: On July 29th, I changed the theme to [Minimal Mistakes](https://github.com/mmistakes/minimal-mistakes).*
