--- a/_posts/2023Q1/2023-01-17-shu-ha-ri.md
+++ b/_posts/2023Q1/2023-01-17-shu-ha-ri.md
@@ -1,5 +1,5 @@
 ---
-title: The Shu-Ha-Ri way of learning
+title: The Shu-Ha-Ri Way of Learning
 categories: [Learning]
 tags: [Personal Development, Agile]
 excerpt: Shu-Ha-Ri is a Japanese martial art concept that we use to describe the stages of learning.
