--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,6 +1,7 @@
 ---
 title: Page not found
 permalink: /404
+search: false
 ---
 
 Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
